--- a/index.html
+++ b/index.html
@@ -5,40 +5,62 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="stylesheet" href="style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
   
   <title>Frontend Mentor | Tip calculator app</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
 <body>
 
-  Bill
+  <img src="./images/logo.svg" alt="Splitter logo">
 
-  Select Tip %
-  5%
-  10%
-  15%
-  25%
-  50%
-  Custom
-
-  Number of People
-
-  Tip Amount
-  / person
-
-  Total
-  / person
-
-  Reset
+  <main>
+    <div class="bill-container">
+      <label for="">Bill</label>
+      <input type="number">
+    </div>
+    <div class="tip-container">
+      <label class="label-tip" for="">Select Tip %</label>
+      <div>
+        <button>5%</button>
+        <button>10%</button>
+        <button>15%</button>
+        <button>25%</button>
+        <button>50%</button>
+        <button>custom</button>
+      </div>
+    </div>
+    <div class="number-container">
+      <label for="">Number of People</label>
+      <input type="text">
+    </div>
+    <div class="amount-container">
+      <span>
+        <div>
+          <div>Tip Amount</div>
+          <p>/ person</p>
+        </div>
+        <h1></h1>
+      </span>
+      <span>
+        <div>
+          <div>Total</div>
+          <p>/ person</p>
+        </div>
+        <h1></h1>
+      </span>
+      <button>Reset</button>
+    </div>
+  </main>
   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
   </div>
+  <script src="script.js"></script>
 </body>
 </html>
